# pay-to-reply-messages

./: .gitignore  README.md  index.html  lovable.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
anchor-program/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  program_funder_wallet.json  tsconfig.json
anchor-program/app/: send-payment.ts
anchor-program/programs/pay-to-reply/: Cargo.toml
anchor-program/programs/pay-to-reply/src/: lib.rs
anchor-program/tests/: pay-to-reply.ts
src/: App.css  App.tsx  index.css  main.tsx
src/assets/: pay_to_reply.json
src/components/: AuthRequiredCard.tsx  ComposeMessage.tsx  DashboardDonationCard.tsx  DonationDialog.tsx  Layout.tsx  MessageActionButtons.tsx  MessageCard.tsx  Navbar.tsx  ProfileManager.tsx  TransactionHistory.tsx  UpdatedMessageCard.tsx  WalletConnect.tsx
src/components/ui/: alert.tsx  avatar.tsx  use-theme.tsx
src/contexts/: WalletContext.tsx
src/hooks/: useAuth.tsx
src/integrations/supabase/: client.ts  types.ts
src/pages/: Auth.tsx  Compose.tsx  Dashboard.tsx  Inbox.tsx  Index.tsx  NotFound.tsx  Share.tsx
src/types/: global.d.ts  wallet.d.ts
src/utils/: anchorClient.ts  browserWalletAdapter.ts  donationService.ts  messageService.ts  messageService.ts.bak  mockData.ts  polyfill.ts
supabase/: config.toml
