
[package]
name = "pay-to-reply"
version = "0.1.0"
description = "Program to send SOL payments when sending messages"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pay_to_reply"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
solana-program = "1.14.17" 
